--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,20 +7,20 @@
     tools:context=".HomeScreen.View.HomeFragment.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <devs.mulham.horizontalcalendar.HorizontalCalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:selectorColor="#3F51B5"
-        app:sizeMiddleText="@dimen/_15sdp"
-        app:sizeTopText="@dimen/_10sdp"
-        app:textColorNormal="#696C6C"
-        app:textColorSelected="#3F51B5"
-        tools:ignore="SpeakableTextPresentCheck" />
+<!--    <devs.mulham.horizontalcalendar.HorizontalCalendarView-->
+<!--        android:id="@+id/calendarView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="4dp"-->
+<!--        android:layout_marginTop="4dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:selectorColor="#3F51B5"-->
+<!--        app:sizeMiddleText="@dimen/_15sdp"-->
+<!--        app:sizeTopText="@dimen/_10sdp"-->
+<!--        app:textColorNormal="#696C6C"-->
+<!--        app:textColorSelected="#3F51B5"-->
+<!--        tools:ignore="SpeakableTextPresentCheck" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAllMed"
