--- a/app/src/main/res/layout/activity_medication_modification.xml
+++ b/app/src/main/res/layout/activity_medication_modification.xml
@@ -400,9 +400,9 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/PrescriptionRefill"
+                    android:id="@+id/PillReminders"
                     android:layout_width="0dp"
-                    android:layout_height="160dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
 
                     android:layout_marginTop="8dp"
@@ -417,36 +417,93 @@
                         android:layout_height="match_parent"
                         android:background="#FFFFFF">
 
-                        <EditText
-                            android:id="@+id/txtPrescription"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="16dp"
-                            android:ems="10"
-                            android:hint="@string/prescriptionDetails"
-                            android:inputType="textPersonName"
-                            android:minHeight="48dp"
-                            android:textSize="12sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/Prescription" />
-
                         <TextView
-                            android:id="@+id/Prescription"
+                            android:id="@+id/textView14"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
                             android:fontFamily="@font/helvetica_bold"
-                            android:text="@string/prescription"
+                            android:text="@string/pillReminder"
                             android:textColor="#0a5087"
                             android:textSize="18sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/prescription"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/helvetica_bold"
+                            android:text="@string/currentlyHave"
+                            android:textColor="#0a5087"
+                            android:textSize="18sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/Prescription"
+                            app:layout_constraintEnd_toEndOf="@+id/txtCurrentlyHave"
+                            app:layout_constraintStart_toStartOf="@+id/txtCurrentlyHave"
+                            app:layout_constraintTop_toTopOf="@+id/Prescription" />
+
+                        <EditText
+                            android:id="@+id/txtRemindMe"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_marginStart="48dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="16dp"
+                            android:ems="10"
+                            android:inputType="textPersonName"
+                            android:minHeight="48dp"
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="1.0"
+                            app:layout_constraintStart_toEndOf="@+id/txtCurrentlyHave"
+                            app:layout_constraintTop_toBottomOf="@+id/Prescription"
+                            app:layout_constraintVertical_bias="0.011"
+                            tools:ignore="SpeakableTextPresentCheck" />
+
+                        <EditText
+                            android:id="@+id/txtCurrentlyHave"
+                            android:layout_width="0dp"
+                            android:layout_height="50dp"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="16dp"
+                            android:ems="10"
+                            android:inputType="textPersonName"
+                            android:minHeight="48dp"
+                            android:textSize="12sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/Prescription"
+                            app:layout_constraintVertical_bias="0.011"
+                            tools:ignore="SpeakableTextPresentCheck" />
+
+                        <TextView
+                            android:id="@+id/Prescription"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="32dp"
+                            android:fontFamily="@font/helvetica_bold"
+                            android:text="@string/remindMe"
+                            android:textColor="#0a5087"
+                            android:textSize="18sp"
+                            app:layout_constraintEnd_toEndOf="@+id/txtRemindMe"
+                            app:layout_constraintHorizontal_bias="0.507"
+                            app:layout_constraintStart_toStartOf="@+id/txtRemindMe"
+                            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+                        <Switch
+                            android:id="@+id/pillReminderSwitch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="16dp"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp"
+                            app:layout_constraintBottom_toBottomOf="@+id/textView14"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@+id/textView14" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.cardview.widget.CardView>
@@ -462,7 +519,7 @@
                     app:cardCornerRadius="30dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/PrescriptionRefill">
+                    app:layout_constraintTop_toBottomOf="@+id/PillReminders">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
